--- a/kid-ui/index.html
+++ b/kid-ui/index.html
@@ -2,8 +2,12 @@
     <head>
         <title>Kids</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="js/app.js"></script>
+        <script src="css/app.css"></script>
     </head>
-    <body>
-        Hello world
+    <body ng-app="kid">
+        <kid-app></kid-app>
     </body>
 </html>
