--- a/provider-ui/index.html
+++ b/provider-ui/index.html
@@ -1,9 +1,16 @@
 <html>
     <head>
-        <title>Providers</title>
+        <title>Parents</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <base href="/">
+
+        <link rel="stylesheet" href="css/app.css" />
     </head>
-    <body>
-        Hello world
+    <body ng-app="provider">
+        <provider-app></provider-app>
+        
+        <script src="/node_modules/angular/angular.js"></script>
+        <script src="/node_modules/@angular/router/angular1/angular_1_router.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
