--- a/provider-ui/index.html
+++ b/provider-ui/index.html
@@ -4,12 +4,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base href="/">
 
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+
         <link rel="stylesheet" href="css/app.css" />
     </head>
     <body ng-app="provider">
         <provider-app></provider-app>
         
+        <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
         <script src="/node_modules/angular/angular.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+        <!-- Angular Material Library -->
+        <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
         <script src="/node_modules/@angular/router/angular1/angular_1_router.js"></script>
         <script src="js/app.js"></script>
     </body>
