--- a/kid-ui/index.html
+++ b/kid-ui/index.html
@@ -13,6 +13,7 @@
         
         <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
         <script src="/node_modules/angular/angular.js"></script>
+        <script src="/node_modules/angular-touch/angular-touch.js"></script>
         <script src="/node_modules/@angular/router/angular1/angular_1_router.js"></script>
         <script src="js/app.js"></script>
     </body>
