--- a/kid-ui/index.html
+++ b/kid-ui/index.html
@@ -5,6 +5,7 @@
         <base href="/">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 
         <link rel="stylesheet" href="css/app.css" />
     </head>
