--- a/kid-ui/index.html
+++ b/kid-ui/index.html
@@ -1,7 +1,11 @@
 <html>
     <head>
         <title>Kids</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="theme-color" content="#002BF9">
+        <!-- hide safari html address bar -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+
         <base href="/">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
