--- a/provider-ui/index.html
+++ b/provider-ui/index.html
@@ -3,6 +3,7 @@
         <title>Parents</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base href="/">
+        <meta name="apple-mobile-web-app-capable" content="yes">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
         <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
