--- a/kid-ui/index.html
+++ b/kid-ui/index.html
@@ -3,6 +3,7 @@
         <title>Kids</title>
         <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="theme-color" content="#002BF9">
+        <meta name="mobile-web-app-capable" content="yes">
         <!-- hide safari html address bar -->
         <meta name="apple-mobile-web-app-capable" content="yes">
 
