--- a/provider-ui/index.html
+++ b/provider-ui/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Parents</title>
+        <title>KandyGO P</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base href="/">
         <meta name="mobile-web-app-capable" content="yes">
